--- a/packages/scroll-indicator/snippets/index.mdx
+++ b/packages/scroll-indicator/snippets/index.mdx
@@ -1,5 +1,5 @@
 ```jsx
-import { useState, useEffect } from 'react';
+import React from 'react';
 
 export const ScrollIndicatorPage = () => (
   <ScrollIndicator>
@@ -54,18 +54,17 @@ export const ScrollIndicatorPage = () => (
 );
 
 const ScrollIndicator = ({ children }) => {
-  const [scroll, setScroll] = useState(0);
+  const [scroll, setScroll] = React.useState(0);
 
   const onScrollProgress = () => {
-    const scrollPx = document.documentElement.scrollTop;
-    const winHeightPx =
-      document.documentElement.scrollHeight -
-      document.documentElement.clientHeight;
+    const html = document.documentElement;
+    const scrollPx = html.scrollTop;
+    const winHeightPx = html.scrollHeight - html.clientHeight;
     const scrolled = `${(scrollPx / winHeightPx) * 100}%`;
 
     setScroll(scrolled);
   };
-  useEffect(() => {
+  React.useEffect(() => {
     window.addEventListener('scroll', onScrollProgress);
 
     return () => {
@@ -73,7 +72,7 @@ const ScrollIndicator = ({ children }) => {
     };
   }, []);
 
-  const progressBarStyle = {
+  const inlineStyle = {
     height: '6px',
     background: '#4C1D95',
     width: scroll,
@@ -82,7 +81,7 @@ const ScrollIndicator = ({ children }) => {
   return (
     <>
       <div className="top-0 left-0 w-screen h-1.5 fixed z-40 shadow-2xl bg-gray-300">
-        <div style={progressBarStyle} />
+        <div style={inlineStyle} />
       </div>
       {children}
     </>
