--- a/packages/navbar/snippets/variantOne.mdx
+++ b/packages/navbar/snippets/variantOne.mdx
@@ -2,15 +2,15 @@
 import { useState } from 'react';
 
 export const NavbarPage = () => {
-  const [isOpen, setIsOpen] = useState(false);
+  const [open, setOpen] = useState(false);
 
   const toggle = () => {
-    setIsOpen(!isOpen);
+    setOpen((prevState) => !prevState);
   };
 
   return (
     <Navbar bgColor="bg-indigo-900" textColor="text-white">
-      <Navbar.Brand href="#">
+      <NavbarBrand href="#">
         <svg
           height="25"
           preserveAspectRatio="xMidYMid"
@@ -27,23 +27,23 @@ export const NavbarPage = () => {
             fill="url(#a)"
           />
         </svg>
-      </Navbar.Brand>
-      <Navbar.Toggler toggle={toggle} />
-      <Navbar.Collapse isOpen={isOpen}>
-        <Navbar.Nav position="left">
-          <Navbar.Item>
-            <Navbar.Link href="#">Home</Navbar.Link>
-          </Navbar.Item>
-        </Navbar.Nav>
-        <Navbar.Nav position="right">
-          <Navbar.Item>
-            <Navbar.Link href="#">Documents</Navbar.Link>
-          </Navbar.Item>
-          <Navbar.Item>
-            <Navbar.Link href="#">React</Navbar.Link>
-          </Navbar.Item>
-        </Navbar.Nav>
-      </Navbar.Collapse>
+      </NavbarBrand>
+      <NavbarToggler toggle={toggle} />
+      <NavbarCollapse open={open}>
+        <NavbarNav position="left">
+          <NavbarItem>
+            <NavbarLink href="#">Home</NavbarLink>
+          </NavbarItem>
+        </NavbarNav>
+        <NavbarNav position="right">
+          <NavbarItem>
+            <NavbarLink href="#">Documents</NavbarLink>
+          </NavbarItem>
+          <NavbarItem>
+            <NavbarLink href="#">React</NavbarLink>
+          </NavbarItem>
+        </NavbarNav>
+      </NavbarCollapse>
     </Navbar>
   );
 };
@@ -51,9 +51,10 @@ export const NavbarPage = () => {
 /* Navbar logic */
 
 const style = {
-  navbar: `font-light text-white md:relative md:flex md:items-center shadow py-2 px-4 md:flex md:flex-row md:justify-start`,
-  brand: `inline-block pt-1.5 pb-1.5 mr-4 cursor-pointer text-2xl font-bold whitespace-nowrap hover:text-gray-400`,
   toggler: `float-right block md:hidden pt-1.5 text-3xl focus:outline-none focus:shadow`,
+  link: `block cursor-pointer py-1.5 md:py-1 px-4 md:px-2 hover:text-gray-400 font-medium`,
+  brand: `inline-block pt-1.5 pb-1.5 mr-4 cursor-pointer text-2xl font-bold whitespace-nowrap hover:text-gray-400`,
+  navbar: `font-light text-white md:relative md:flex md:items-center shadow py-2 px-4 md:flex md:flex-row md:justify-start`,
   collapse: {
     default: `md:flex-grow md:items-center md:flex`,
     open: `visible opacity-1 transition-all ease-out duration-500 md:transition-none`,
@@ -64,40 +65,47 @@ const style = {
     center: `block pl-0 mb-0 ml-auto md:flex md:pl-0 md:mb-0 md:mx-auto `,
     right: `block pl-0 mb-0 ml-auto md:flex md:pl-0 md:mb-0`,
   },
-  link: `block cursor-pointer py-1.5 md:py-1 px-4 md:px-2 hover:text-gray-400 font-medium`,
 };
 
-const Navbar = ({ bgColor, textColor, children }) => (
-  <nav className={`${bgColor} ${textColor} ${style.navbar}`}>{children}</nav>
-);
+function Navbar({ bgColor, textColor, children }) {
+  return (
+    <nav className={`${bgColor} ${textColor} ${style.navbar}`}>{children}</nav>
+  );
+}
 
 /* You can wrap the a tag with Link and pass href to Link if you are using either Create-React-App, Next.js or Gatsby */
-Navbar.Brand = ({ children, href }) => (
-  <a href={href} className={style.brand}>
-    <strong>{children}</strong>
-  </a>
-);
+function NavbarBrand({ children, href }) {
+  return (
+    <a href={href} className={style.brand}>
+      <strong>{children}</strong>
+    </a>
+  );
+}
 
-Navbar.Toggler = ({ toggle }) => (
-  <button
-    type="button"
-    aria-expanded="false"
-    aria-label="Toggle navigation"
-    className={style.toggler}
-    onClick={toggle}
-  >
-    &#8801;
-  </button>
-);
+function NavbarToggler({ toggle }) {
+  return (
+    <button
+      type="button"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+      className={style.toggler}
+      onClick={toggle}
+    >
+      &#8801;
+    </button>
+  );
+}
 
-Navbar.Collapse = ({ children, isOpen }) => (
-  <div
-    className={`${isOpen ? style.collapse.open : style.collapse.close} 
-    ${style.collapse.default}`}
-  >
-    {children}
-  </div>
-);
+function NavbarCollapse({ children, open }) {
+  return (
+    <div
+      className={`${style.collapse.default}
+        ${open ? style.collapse.open : style.collapse.close}  `}
+    >
+      {children}
+    </div>
+  );
+}
 
 /*
 The navbar nav has three positions
@@ -105,18 +113,20 @@ The navbar nav has three positions
  - center
  - right
 * */
-Navbar.Nav = ({ children, position }) => (
-  <ul className={style.nav[position]}>{children}</ul>
-);
+function NavbarNav({ children, position }) {
+  return <ul className={style.nav[position]}>{children}</ul>;
+}
 
-Navbar.Item = ({ children }) => <li>{children}</li>;
+function NavbarItem({ children }) {
+  return <li>{children}</li>;
+}
 
 /* You can wrap the a tag with Link and pass href to Link if you are using either Create-React-App, Next.js or Gatsby */
-Navbar.Link = ({ children, href }) => (
-  <a href={href} className={style.link}>
-    {children}
-  </a>
-);
-
-export default Navbar;
+function NavbarLink({ children, href }) {
+  return (
+    <a href={href} className={style.link}>
+      {children}
+    </a>
+  );
+}
 ```
