--- a/packages/sidenav/snippets/right.mdx
+++ b/packages/sidenav/snippets/right.mdx
@@ -1,24 +1,25 @@
 ```jsx
-import { useEffect, useRef, useState } from 'react';
+import React from 'react';
 
 export const SidenavPage = () => {
-  const [isOpen, setIsOpen] = useState(false);
+  const [open, setOpen] = React.useState(false);
+
   const toggle = () => {
-    setIsOpen(!isOpen);
+    setOpen((prevState) => !prevState);
   };
   return (
     <>
       <button
         type="button"
-        aria-disabled={isOpen}
-        disabled={isOpen}
+        aria-disabled={open}
+        disabled={open}
         onClick={toggle}
         className="text-white focus:outline-none m-1.5 rounded px-6 py-2 font-medium bg-gray-800"
       >
         Click to open me
       </button>
-      <Sidenav isOpen={isOpen} toggle={toggle}>
-        <Sidenav.Item href="#">
+      <Sidenav open={open} toggle={toggle}>
+        <SidenavItem href="#">
           <svg
             stroke="currentColor"
             fill="currentColor"
@@ -31,8 +32,8 @@ export const SidenavPage = () => {
             <path d="M610.5 373.3c2.6-14.1 2.6-28.5 0-42.6l25.8-14.9c3-1.7 4.3-5.2 3.3-8.5-6.7-21.6-18.2-41.2-33.2-57.4-2.3-2.5-6-3.1-9-1.4l-25.8 14.9c-10.9-9.3-23.4-16.5-36.9-21.3v-29.8c0-3.4-2.4-6.4-5.7-7.1-22.3-5-45-4.8-66.2 0-3.3.7-5.7 3.7-5.7 7.1v29.8c-13.5 4.8-26 12-36.9 21.3l-25.8-14.9c-2.9-1.7-6.7-1.1-9 1.4-15 16.2-26.5 35.8-33.2 57.4-1 3.3.4 6.8 3.3 8.5l25.8 14.9c-2.6 14.1-2.6 28.5 0 42.6l-25.8 14.9c-3 1.7-4.3 5.2-3.3 8.5 6.7 21.6 18.2 41.1 33.2 57.4 2.3 2.5 6 3.1 9 1.4l25.8-14.9c10.9 9.3 23.4 16.5 36.9 21.3v29.8c0 3.4 2.4 6.4 5.7 7.1 22.3 5 45 4.8 66.2 0 3.3-.7 5.7-3.7 5.7-7.1v-29.8c13.5-4.8 26-12 36.9-21.3l25.8 14.9c2.9 1.7 6.7 1.1 9-1.4 15-16.2 26.5-35.8 33.2-57.4 1-3.3-.4-6.8-3.3-8.5l-25.8-14.9zM496 400.5c-26.8 0-48.5-21.8-48.5-48.5s21.8-48.5 48.5-48.5 48.5 21.8 48.5 48.5-21.7 48.5-48.5 48.5zM224 256c70.7 0 128-57.3 128-128S294.7 0 224 0 96 57.3 96 128s57.3 128 128 128zm201.2 226.5c-2.3-1.2-4.6-2.6-6.8-3.9l-7.9 4.6c-6 3.4-12.8 5.3-19.6 5.3-10.9 0-21.4-4.6-28.9-12.6-18.3-19.8-32.3-43.9-40.2-69.6-5.5-17.7 1.9-36.4 17.9-45.7l7.9-4.6c-.1-2.6-.1-5.2 0-7.8l-7.9-4.6c-16-9.2-23.4-28-17.9-45.7.9-2.9 2.2-5.8 3.2-8.7-3.8-.3-7.5-1.2-11.4-1.2h-16.7c-22.2 10.2-46.9 16-72.9 16s-50.6-5.8-72.9-16h-16.7C60.2 288 0 348.2 0 422.4V464c0 26.5 21.5 48 48 48h352c10.1 0 19.5-3.2 27.2-8.5-1.2-3.8-2-7.7-2-11.8v-9.2z" />
           </svg>
           <span className="pl-2">User Config</span>
-        </Sidenav.Item>
-        <Sidenav.Item href="#">
+        </SidenavItem>
+        <SidenavItem href="#">
           <svg
             stroke="currentColor"
             fill="currentColor"
@@ -45,8 +46,8 @@ export const SidenavPage = () => {
             <path d="M172.2 226.8c-14.6-2.9-28.2 8.9-28.2 23.8V301c0 10.2 7.1 18.4 16.7 22 18.2 6.8 31.3 24.4 31.3 45 0 26.5-21.5 48-48 48s-48-21.5-48-48V120c0-13.3-10.7-24-24-24H24c-13.3 0-24 10.7-24 24v248c0 89.5 82.1 160.2 175 140.7 54.4-11.4 98.3-55.4 109.7-109.7 17.4-82.9-37-157.2-112.5-172.2zM209 0c-9.2-.5-17 6.8-17 16v31.6c0 8.5 6.6 15.5 15 15.9 129.4 7 233.4 112 240.9 241.5.5 8.4 7.5 15 15.9 15h32.1c9.2 0 16.5-7.8 16-17C503.4 139.8 372.2 8.6 209 0zm.3 96c-9.3-.7-17.3 6.7-17.3 16.1v32.1c0 8.4 6.5 15.3 14.8 15.9 76.8 6.3 138 68.2 144.9 145.2.8 8.3 7.6 14.7 15.9 14.7h32.2c9.3 0 16.8-8 16.1-17.3-8.4-110.1-96.5-198.2-206.6-206.7z" />
           </svg>
           <span className="pl-2">Posts</span>
-        </Sidenav.Item>
-        <Sidenav.Item href="#">
+        </SidenavItem>
+        <SidenavItem href="#">
           <svg
             stroke="currentColor"
             fill="currentColor"
@@ -59,8 +60,8 @@ export const SidenavPage = () => {
             <path d="M20,8h-5.612l1.123-3.367c0.202-0.608,0.1-1.282-0.275-1.802S14.253,2,13.612,2H12c-0.297,0-0.578,0.132-0.769,0.36 L6.531,8H4c-1.103,0-2,0.897-2,2v9c0,1.103,0.897,2,2,2h3h10.307c0.829,0,1.581-0.521,1.873-1.298l2.757-7.351 C21.979,12.239,22,12.12,22,12v-2C22,8.897,21.103,8,20,8z M4,10h2v9H4V10z M20,11.819L17.307,19H8V9.362L12.468,4l1.146,0 l-1.562,4.683c-0.103,0.305-0.051,0.64,0.137,0.901C12.377,9.846,12.679,10,13,10h7V11.819z" />
           </svg>
           <span className="pl-2">Likes</span>
-        </Sidenav.Item>
-        <Sidenav.Item href="#">
+        </SidenavItem>
+        <SidenavItem href="#">
           <svg
             stroke="currentColor"
             fill="currentColor"
@@ -73,42 +74,44 @@ export const SidenavPage = () => {
             <path d="M416 192c0-88.4-93.1-160-208-160S0 103.6 0 192c0 34.3 14.1 65.9 38 92-13.4 30.2-35.5 54.2-35.8 54.5-2.2 2.3-2.8 5.7-1.5 8.7S4.8 352 8 352c36.6 0 66.9-12.3 88.7-25 32.2 15.7 70.3 25 111.3 25 114.9 0 208-71.6 208-160zm122 220c23.9-26 38-57.7 38-92 0-66.9-53.5-124.2-129.3-148.1.9 6.6 1.3 13.3 1.3 20.1 0 105.9-107.7 192-240 192-10.8 0-21.3-.8-31.7-1.9C207.8 439.6 281.8 480 368 480c41 0 79.1-9.2 111.3-25 21.8 12.7 52.1 25 88.7 25 3.2 0 6.1-1.9 7.3-4.8 1.3-2.9.7-6.3-1.5-8.7-.3-.3-22.4-24.2-35.8-54.5z" />
           </svg>
           <span className="pl-2">Comments</span>
-        </Sidenav.Item>
+        </SidenavItem>
       </Sidenav>
     </>
   );
 };
 
 /* Sidenav logic */
+
 const style = {
+  item: `flex justify-start cursor-pointer font-medium hover:text-gray-400 ml-8 mb-10`,
+  closeIcon: `absolute top-1 focus:outline-none right-3 text-3xl text-white cursor-pointer`,
   sidenav: {
     open: `w-7/12 md:w-60 bg-gray-800 text-white overflow-x-hidden`,
     close: `w-0 bg-gray-800 text-white overflow-x-hidden`,
-    default: `right-0 h-screen fixed z-20 top-0 transition-all ease duration-200`,
+    default: `h-screen fixed z-20 top-0 right-0 transition-all ease duration-200`,
   },
-  item: `flex justify-start cursor-pointer font-medium hover:text-gray-400 ml-8 mb-10`,
-  closeIcon: `absolute top-1 focus:outline-none right-3 text-3xl text-white cursor-pointer`,
 };
 
-export const Sidenav = ({ isOpen, toggle, children }) => {
-  const ref = useRef(null);
+function Sidenav({ open, toggle, children }) {
+  const ref = React.useRef(null);
 
-  useEffect(() => {
+  //close on click outside
+  React.useEffect(() => {
     const handleOutsideClick = (event) => {
       if (!ref.current?.contains(event.target)) {
-        if (!isOpen) return;
+        if (!open) return;
         toggle(false);
       }
     };
     window.addEventListener('mousedown', handleOutsideClick);
     return () => window.removeEventListener('mousedown', handleOutsideClick);
-  }, [isOpen, ref]);
+  }, [open, ref]);
 
   return (
     <aside
-      className={`${isOpen ? style.sidenav.open : style.sidenav.close} 
-      ${style.sidenav.default}`}
       ref={ref}
+      className={`${style.sidenav.default} 
+        ${open ? style.sidenav.open : style.sidenav.close}`}
     >
       <button aria-label="Close" className={style.closeIcon} onClick={toggle}>
         &times;
@@ -116,11 +119,13 @@ export const Sidenav = ({ isOpen, toggle, children }) => {
       <div className="mt-12">{children}</div>
     </aside>
   );
-};
+}
 
-Sidenav.Item = ({ children, href }) => (
-  <a href={href} className={style.item}>
-    {children}
-  </a>
-);
+function SidenavItem({ children, href }) {
+  return (
+    <a href={href} className={style.item}>
+      {children}
+    </a>
+  );
+}
 ```
