rewrite navbar component, update home page title and update website content

--- a/packages/navbar/snippets/variantOne.mdx
+++ b/packages/navbar/snippets/variantOne.mdx
@@ -1,20 +1,13 @@
 ```jsx
-import { useState } from 'react';
+import React from 'react';
 
 export const NavbarPage = () => {
-  const [open, setOpen] = useState(false);
-
-  const toggle = () => {
-    setOpen((prevState) => !prevState);
-  };
-
   return (
-    <Navbar bgColor="bg-indigo-900" textColor="text-white">
+    <Navbar className="bg-indigo-900 text-white">
       <NavbarBrand href="#">
         <svg
-          height="25"
+          className="w-9 h-9"
           preserveAspectRatio="xMidYMid"
-          width="25"
           xmlns="http://www.w3.org/2000/svg"
           viewBox="0 0 256 153.6"
         >
@@ -28,19 +21,22 @@ export const NavbarPage = () => {
           />
         </svg>
       </NavbarBrand>
-      <NavbarToggler toggle={toggle} />
-      <NavbarCollapse open={open}>
-        <NavbarNav position="left">
+      <NavbarToggler />
+      <NavbarCollapse>
+        <NavbarNav orientation="start">
           <NavbarItem>
-            <NavbarLink href="#">Home</NavbarLink>
+            <NavbarLink href="#">Get Started</NavbarLink>
+          </NavbarItem>
+          <NavbarItem>
+            <NavbarLink href="#">Core Concepts</NavbarLink>
           </NavbarItem>
         </NavbarNav>
-        <NavbarNav position="right">
+        <NavbarNav orientation="end">
           <NavbarItem>
-            <NavbarLink href="#">Documents</NavbarLink>
+            <NavbarLink href="#">Base Styles</NavbarLink>
           </NavbarItem>
           <NavbarItem>
-            <NavbarLink href="#">React</NavbarLink>
+            <NavbarLink href="#">Customization</NavbarLink>
           </NavbarItem>
         </NavbarNav>
       </NavbarCollapse>
@@ -51,38 +47,66 @@ export const NavbarPage = () => {
 /* Navbar logic */
 
 const style = {
-  toggler: `float-right block md:hidden pt-1.5 text-3xl focus:outline-none focus:shadow`,
-  link: `block cursor-pointer py-1.5 md:py-1 px-4 md:px-2 hover:text-gray-400 font-medium`,
-  brand: `inline-block pt-1.5 pb-1.5 mr-4 cursor-pointer text-2xl font-bold whitespace-nowrap hover:text-gray-400`,
-  navbar: `font-light text-white md:relative md:flex md:items-center shadow py-2 px-4 md:flex md:flex-row md:justify-start`,
+  navbar: `fixed px-4 py-2 shadow top-0 w-full lg:flex lg:flex-row lg:items-center lg:justify-start lg:relative`,
+  brand: `cursor-pointer font-bold inline-block mr-4 py-1.5 text-2xl whitespace-nowrap hover:text-gray-200`,
+  toggler: `block float-right text-4xl lg:hidden focus:outline-none focus:shadow`,
+  item: `whitespace-pre cursor-pointer px-4 py-3 hover:text-gray-200`,
   collapse: {
-    default: `md:flex-grow md:items-center md:flex`,
-    open: `visible opacity-1 transition-all ease-out duration-500 md:transition-none`,
-    close: `invisible h-0 opacity-0 md:visible md:opacity-100 md:h-auto`,
+    default: `border-t border-gray-400 fixed left-0 mt-2 shadow py-2 text-center lg:border-none lg:flex lg:flex-grow lg:items-center lg:mt-0 lg:py-0 lg:relative lg:shadow-none`,
+    open: `h-auto visible transition-all duration-500 ease-out w-full opacity-100 lg:transition-none`,
+    close: `h-auto invisible w-0 transition-all duration-300 ease-in lg:opacity-100 lg:transition-none lg:visible`,
   },
   nav: {
-    left: `block pl-0 mb-0 mr-auto md:flex md:pl-0 md:mb-0`,
-    center: `block pl-0 mb-0 ml-auto md:flex md:pl-0 md:mb-0 md:mx-auto `,
-    right: `block pl-0 mb-0 ml-auto md:flex md:pl-0 md:mb-0`,
+    start: `block mb-0 mr-auto pl-0 lg:flex lg:mb-0 lg:pl-0`,
+    middle: `block mb-0 ml-auto pl-0 lg:flex lg:pl-0 lg:mb-0 lg:mx-auto`,
+    end: `block pl-0 mb-0 ml-auto lg:flex lg:pl-0 lg:mb-0`,
   },
 };
 
-function Navbar({ bgColor, textColor, children }) {
+const Context = React.createContext({});
+
+const Navbar = ({ children, className }) => {
+  const [open, setOpen] = React.useState(false);
+  const navbarRef = React.useRef(null);
+
+  const toggle = React.useCallback(() => {
+    setOpen((prevState) => !prevState);
+  }, []);
+
+  // close navbar on click outside when viewport is less than 1024px
+  React.useEffect(() => {
+    const handleOutsideClick = (event) => {
+      if (window.innerWidth < 1024) {
+        if (!navbarRef.current?.contains(event.target)) {
+          if (!open) return;
+          setOpen(false);
+        }
+      }
+    };
+    window.addEventListener('click', handleOutsideClick);
+    return () => window.removeEventListener('click', handleOutsideClick);
+  }, [open, navbarRef]);
+
   return (
-    <nav className={`${bgColor} ${textColor} ${style.navbar}`}>{children}</nav>
+    <Context.Provider value={{ open, toggle }}>
+      <nav ref={navbarRef} className={`${className} ${style.navbar}`}>
+        {children}
+      </nav>
+    </Context.Provider>
   );
-}
+};
+
+const useToggle = () => React.useContext(Context);
 
 /* You can wrap the a tag with Link and pass href to Link if you are using either Create-React-App, Next.js or Gatsby */
-function NavbarBrand({ children, href }) {
-  return (
-    <a href={href} className={style.brand}>
-      <strong>{children}</strong>
-    </a>
-  );
-}
+const NavbarBrand = ({ children, href }) => (
+  <a href={href} className={style.brand}>
+    <strong>{children}</strong>
+  </a>
+);
 
-function NavbarToggler({ toggle }) {
+const NavbarToggler = () => {
+  const { toggle } = useToggle();
   return (
     <button
       type="button"
@@ -94,39 +118,31 @@ function NavbarToggler({ toggle }) {
       &#8801;
     </button>
   );
-}
+};
 
-function NavbarCollapse({ children, open }) {
+const NavbarCollapse = ({ children }) => {
+  const { open } = useToggle();
   return (
     <div
+      style={{ backgroundColor: 'inherit' }}
       className={`${style.collapse.default}
-        ${open ? style.collapse.open : style.collapse.close}  `}
+        ${open ? style.collapse.open : style.collapse.close}`}
     >
       {children}
     </div>
   );
-}
+};
 
-/*
-The navbar nav has three positions
- - left
- - center
- - right
-* */
-function NavbarNav({ children, position }) {
-  return <ul className={style.nav[position]}>{children}</ul>;
-}
+const NavbarNav = ({ children, orientation }) => (
+  <ul className={style.nav[orientation]}>{children}</ul>
+);
 
-function NavbarItem({ children }) {
-  return <li>{children}</li>;
-}
+const NavbarItem = ({ children }) => <li className={style.item}>{children}</li>;
 
 /* You can wrap the a tag with Link and pass href to Link if you are using either Create-React-App, Next.js or Gatsby */
-function NavbarLink({ children, href }) {
-  return (
-    <a href={href} className={style.link}>
-      {children}
-    </a>
-  );
-}
+const NavbarLink = ({ children, href, active, activeClass }) => (
+  <a href={href} className={active ? activeClass : ''}>
+    {children}
+  </a>
+);
 ```
