--- a/packages/navbar/snippets/variantTwo.mdx
+++ b/packages/navbar/snippets/variantTwo.mdx
@@ -1,68 +1,44 @@
 ```jsx
-import { useState } from 'react';
+import React from 'react';
 
 export const NavbarPage = () => {
-  const [open, setOpen] = useState(false);
-
-  const toggle = () => {
-    setOpen((prevState) => !prevState);
-  };
-
   return (
-    <Navbar bgColor="bg-green-700" textColor="text-white">
+    <Navbar className="bg-gray-900 text-white">
       <NavbarBrand href="#">
         <svg
-          width="25"
-          height="23"
-          viewBox="0 0 256 236"
           xmlns="http://www.w3.org/2000/svg"
-          preserveAspectRatio="xMinYMin meet"
+          viewBox="0 0 24 24"
+          className="w-9 h-9 bg-white rounded-full"
         >
-          <path
-            d="M128.075 236.075l47.104-144.97H80.97l47.104 144.97z"
-            fill="#E24329"
-          />
-          <path
-            d="M128.075 236.074L80.97 91.104H14.956l113.119 144.97z"
-            fill="#FC6D26"
-          />
-          <path
-            d="M14.956 91.104L.642 135.16a9.752 9.752 0 0 0 3.542 10.903l123.891 90.012-113.12-144.97z"
-            fill="#FCA326"
-          />
-          <path
-            d="M14.956 91.105H80.97L52.601 3.79c-1.46-4.493-7.816-4.492-9.275 0l-28.37 87.315z"
-            fill="#E24329"
-          />
-          <path
-            d="M128.075 236.074l47.104-144.97h66.015l-113.12 144.97z"
-            fill="#FC6D26"
-          />
-          <path
-            d="M241.194 91.104l14.314 44.056a9.752 9.752 0 0 1-3.543 10.903l-123.89 90.012 113.119-144.97z"
-            fill="#FCA326"
-          />
-          <path
-            d="M241.194 91.105h-66.015l28.37-87.315c1.46-4.493 7.816-4.492 9.275 0l28.37 87.315z"
-            fill="#E24329"
-          />
+          <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" />
         </svg>
       </NavbarBrand>
-      <NavbarToggler toggle={toggle} />
-      <NavbarCollapse open={open}>
-        <NavbarNav position="left">
+      <NavbarToggler />
+      <NavbarCollapse>
+        <NavbarNav orientation="start">
           <NavbarItem>
-            <NavbarLink href="#">Home</NavbarLink>
+            <NavbarLink href="#" active={true} activeClass="text-blue-500">
+              Organisation
+            </NavbarLink>
+          </NavbarItem>
+          <NavbarItem>
+            <NavbarLink href="#">Issues</NavbarLink>
           </NavbarItem>
         </NavbarNav>
-        <NavbarNav position="center">
+        <NavbarNav orientation="middle">
           <NavbarItem>
-            <NavbarLink href="#">TailwindCSS</NavbarLink>
+            <NavbarLink href="#">Pull Requests</NavbarLink>
+          </NavbarItem>
+          <NavbarItem>
+            <NavbarLink href="#">Issues</NavbarLink>
           </NavbarItem>
         </NavbarNav>
-        <NavbarNav position="right">
+        <NavbarNav orientation="end">
           <NavbarItem>
-            <NavbarLink href="#">Next.js</NavbarLink>
+            <NavbarLink href="#">Market Place</NavbarLink>
+          </NavbarItem>
+          <NavbarItem>
+            <NavbarLink href="#">Explore</NavbarLink>
           </NavbarItem>
         </NavbarNav>
       </NavbarCollapse>
@@ -73,38 +49,66 @@ export const NavbarPage = () => {
 /* Navbar logic */
 
 const style = {
-  toggler: `float-right block md:hidden pt-1.5 text-3xl focus:outline-none focus:shadow`,
-  link: `block cursor-pointer py-1.5 md:py-1 px-4 md:px-2 hover:text-gray-400 font-medium`,
-  brand: `inline-block pt-1.5 pb-1.5 mr-4 cursor-pointer text-2xl font-bold whitespace-nowrap hover:text-gray-400`,
-  navbar: `font-light text-white md:relative md:flex md:items-center shadow py-2 px-4 md:flex md:flex-row md:justify-start`,
+  navbar: `fixed px-4 py-2 shadow top-0 w-full lg:flex lg:flex-row lg:items-center lg:justify-start lg:relative`,
+  brand: `cursor-pointer font-bold inline-block mr-4 py-1.5 text-2xl whitespace-nowrap hover:text-gray-200`,
+  toggler: `block float-right text-4xl lg:hidden focus:outline-none focus:shadow`,
+  item: `whitespace-pre cursor-pointer px-4 py-3 hover:text-gray-200`,
   collapse: {
-    default: `md:flex-grow md:items-center md:flex`,
-    open: `visible opacity-1 transition-all ease-out duration-500 md:transition-none`,
-    close: `invisible h-0 opacity-0 md:visible md:opacity-100 md:h-auto`,
+    default: `border-t border-gray-500 fixed left-0 mt-2 shadow py-2 text-center lg:border-none lg:flex lg:flex-grow lg:items-center lg:mt-0 lg:py-0 lg:relative lg:shadow-none`,
+    open: `h-auto visible transition-all duration-500 ease-out w-full opacity-100 lg:transition-none`,
+    close: `h-auto invisible w-0 transition-all duration-300 ease-in lg:opacity-100 lg:transition-none lg:visible`,
   },
   nav: {
-    left: `block pl-0 mb-0 mr-auto md:flex md:pl-0 md:mb-0`,
-    center: `block pl-0 mb-0 ml-auto md:flex md:pl-0 md:mb-0 md:mx-auto `,
-    right: `block pl-0 mb-0 ml-auto md:flex md:pl-0 md:mb-0`,
+    start: `block mb-0 mr-auto pl-0 lg:flex lg:mb-0 lg:pl-0`,
+    middle: `block mb-0 ml-auto pl-0 lg:flex lg:pl-0 lg:mb-0 lg:mx-auto`,
+    end: `block pl-0 mb-0 ml-auto lg:flex lg:pl-0 lg:mb-0`,
   },
 };
 
-function Navbar({ bgColor, textColor, children }) {
+const Context = React.createContext({});
+
+const Navbar = ({ children, className }) => {
+  const [open, setOpen] = React.useState(false);
+  const navbarRef = React.useRef(null);
+
+  const toggle = React.useCallback(() => {
+    setOpen((prevState) => !prevState);
+  }, []);
+
+  // close navbar on click outside when viewport is less than 1024px
+  React.useEffect(() => {
+    const handleOutsideClick = (event) => {
+      if (window.innerWidth < 1024) {
+        if (!navbarRef.current?.contains(event.target)) {
+          if (!open) return;
+          setOpen(false);
+        }
+      }
+    };
+    window.addEventListener('click', handleOutsideClick);
+    return () => window.removeEventListener('click', handleOutsideClick);
+  }, [open, navbarRef]);
+
   return (
-    <nav className={`${bgColor} ${textColor} ${style.navbar}`}>{children}</nav>
+    <Context.Provider value={{ open, toggle }}>
+      <nav ref={navbarRef} className={`${className} ${style.navbar}`}>
+        {children}
+      </nav>
+    </Context.Provider>
   );
-}
+};
+
+const useToggle = () => React.useContext(Context);
 
 /* You can wrap the a tag with Link and pass href to Link if you are using either Create-React-App, Next.js or Gatsby */
-function NavbarBrand({ children, href }) {
-  return (
-    <a href={href} className={style.brand}>
-      <strong>{children}</strong>
-    </a>
-  );
-}
+const NavbarBrand = ({ children, href }) => (
+  <a href={href} className={style.brand}>
+    <strong>{children}</strong>
+  </a>
+);
 
-function NavbarToggler({ toggle }) {
+const NavbarToggler = () => {
+  const { toggle } = useToggle();
   return (
     <button
       type="button"
@@ -116,39 +120,31 @@ function NavbarToggler({ toggle }) {
       &#8801;
     </button>
   );
-}
+};
 
-function NavbarCollapse({ children, open }) {
+const NavbarCollapse = ({ children }) => {
+  const { open } = useToggle();
   return (
     <div
-      className={`${style.collapse.default} 
-        ${open ? style.collapse.open : style.collapse.close}  `}
+      style={{ backgroundColor: 'inherit' }}
+      className={`${style.collapse.default}
+        ${open ? style.collapse.open : style.collapse.close}`}
     >
       {children}
     </div>
   );
-}
+};
 
-/*
-The navbar nav has three positions
- - left
- - center
- - right
-* */
-function NavbarNav({ children, position }) {
-  return <ul className={style.nav[position]}>{children}</ul>;
-}
+const NavbarNav = ({ children, orientation }) => (
+  <ul className={style.nav[orientation]}>{children}</ul>
+);
 
-function NavbarItem({ children }) {
-  return <li>{children}</li>;
-}
+const NavbarItem = ({ children }) => <li className={style.item}>{children}</li>;
 
 /* You can wrap the a tag with Link and pass href to Link if you are using either Create-React-App, Next.js or Gatsby */
-function NavbarLink({ children, href }) {
-  return (
-    <a href={href} className={style.link}>
-      {children}
-    </a>
-  );
-}
+const NavbarLink = ({ children, href, active, activeClass }) => (
+  <a href={href} className={active ? activeClass : ''}>
+    {children}
+  </a>
+);
 ```
