--- a/website/utils/tailwindConfig.mdx
+++ b/website/utils/tailwindConfig.mdx
@@ -4,12 +4,8 @@ module.exports = {
   theme: {
     extend: {
       animation: {
-        // If you are using Toast component
-        left: 'left 0.3s',
-        right: 'right 0.3s',
-
         // if you are using the animate variant of the modal
-        modal: 'modal 0.3s',
+        modal: 'modal 0.5s',
 
         // if you are using drawer variant right
         'drawer-right': 'drawer-right 0.3s',
@@ -24,6 +20,12 @@ module.exports = {
         'drawer-bottom': 'drawer-bottom 0.3s',
       },
       keyframes: {
+        // if you are using the animate variant of the modal
+        modal: {
+          '0%, 100%': { opacity: 0 },
+          '100%': { opacity: 1 },
+        },
+
         // if you are using drawer variant right
         'drawer-right': {
           '0%, 100%': { right: '-500px' },
@@ -46,22 +48,6 @@ module.exports = {
         'drawer-bottom': {
           '0%, 100%': { bottom: '-500px' },
           '100%': { bottom: '0' },
-        },
-
-        // if you are using the animate variant of the modal
-        modal: {
-          '0%, 100%': { top: '-500px' },
-          '100%': { top: '0' },
-        },
-
-        /* If you are using Toast component*/
-        left: {
-          '0%, 100%': { transform: 'translateX(-100%)' },
-          '100%': { transform: 'translateX(0)' },
-        },
-        right: {
-          '0%, 100%': { transform: 'translateX(100%)' },
-          '100%': { transform: 'translateX(0)' },
         },
       },
     },
