--- a/packages/field/snippets/with-react-hook-form.mdx
+++ b/packages/field/snippets/with-react-hook-form.mdx
@@ -72,7 +72,8 @@ const Field = forwardRef(
           aria-required={dot}
           aria-invalid={!!error}
           className={`${style.default} ${disabled ? style.disabled : ''}
-           ${error ? style.error : 'border-gray-300'}`}
+             ${error ? style.error : 'border-gray-300'}
+          `}
           disabled={disabled}
           id={name}
           name={name}
@@ -89,7 +90,8 @@ const Field = forwardRef(
           aria-required={dot}
           aria-invalid={!!error}
           className={`${style.default} ${disabled ? style.disabled : ''}
-          ${error ? style.error : 'border-gray-300'}`}
+             ${error ? style.error : 'border-gray-300'}
+          `}
           disabled={disabled}
           id={name}
           name={name}
@@ -129,8 +131,9 @@ const Field = forwardRef(
             aria-required={dot}
             aria-invalid={!!error}
             className={`${style.default} ${icon ? 'pl-12' : ''}
-            ${error ? style.error : 'border-gray-300'}
-            ${disabled ? style.disabled : ''} `}
+               ${error ? style.error : 'border-gray-300'}
+               ${disabled ? style.disabled : ''}
+            `}
             disabled={disabled}
             id={name}
             name={name}
@@ -150,7 +153,7 @@ const Field = forwardRef(
           {dot && <span className={style.dot}>*</span>}
         </label>
         {component}
-        {error && <p className={style.errorMessage}>{error}</p>}
+        {error && <span role="alert" className={style.errorMessage}>{error}</span>}
       </div>
     );
   },
