add display name for components that do not have one

--- a/packages/field/snippets/with-formik.mdx
+++ b/packages/field/snippets/with-formik.mdx
@@ -170,6 +170,8 @@ const Field = forwardRef(
   },
 );
 
+Field.displayName = 'Field';
+
 const ErrorIcon = () => (
   <svg
     xmlns="http://www.w3.org/2000/svg"
