--- a/packages/collapse/snippets/first.mdx
+++ b/packages/collapse/snippets/first.mdx
@@ -7,10 +7,11 @@ export const CollapsePage = () => {
   const toggle = () => {
     setIsOpen(!isOpen);
   };
+
   return (
     <div className="m-8">
       <button
-        className="bg-black px-4 py-1 focus:outline-none text-white rounded font-medium"
+        className="px-4 py-1 text-white font-medium bg-black rounded focus:outline-none"
         onClick={toggle}
       >
         Toggle
@@ -28,13 +29,17 @@ export const CollapsePage = () => {
 /* Logic */
 const Collapse = ({ isOpen, children }) => {
   const ref = useRef(null);
-  const inlineStyle = isOpen ? { height: ref.current?.scrollHeight } : { height: 0 };
+
+  const inlineStyle = isOpen
+    ? { height: ref.current?.scrollHeight }
+    : { height: 0 };
 
   return (
     <div
-      className="mt-2 overflow-hidden text-gray-600 transition-height ease duration-300"
       ref={ref}
+      aria-hidden={!isOpen}
       style={inlineStyle}
+      className="transition-height ease mt-2 text-gray-600 overflow-hidden duration-300"
     >
       {children}
     </div>
