--- a/src/packages/autocomplete/snippets/index.mdx
+++ b/src/packages/autocomplete/snippets/index.mdx
@@ -26,11 +26,11 @@ const style = {
   label: `text-gray-700`,
   disabled: `cursor-not-allowed`,
   container: `relative mb-6 mt-3`,
-  default: `rounded-lg w-full flex-1 mt-1 py-1.5 px-4 bg-white text-gray-700 placeholder-gray-400 shadow-sm text-base focus:outline-none focus:ring-2 focus:border-transparent border border-gray-300 border-transparent`,
+  default: `rounded-lg w-full flex-1 mt-1 py-1.5 px-4 bg-white text-gray-700 placeholder-gray-400 shadow-sm text-base focus:outline-none focus:ring-2 focus:border-transparent border border-gray-300`,
   suggestion: {
     activeItem: 'bg-gray-300',
     item: `px-4 py-3 focus text-sm text-gray-700 cursor-pointer hover:bg-gray-200`,
-    list: `shadow-xl absolute top-full left-0 right-0 border w-auto md:max-w-xs overflow-y-auto max-h-80 mt-2 bg-white p-3 z-20`,
+    list: `shadow-xl absolute top-full left-0 right-0 border w-auto md:max-w-full overflow-y-auto max-h-80 mt-2 bg-white p-3 z-20`,
   },
 };
 
