--- a/src/packages/autocomplete/snippets/index.mdx
+++ b/src/packages/autocomplete/snippets/index.mdx
@@ -99,7 +99,7 @@ function Autocomplete({
     }
     // User pressed the down arrow
     else if (e.keyCode === 40) {
-      if (activeSuggestion - 1 === filteredSuggestions.length) {
+      if (activeSuggestion === filteredSuggestions.length - 1) {
         return;
       }
       setActiveSuggestion(activeSuggestion + 1);
